add : Get class price API
